wp-content/themes/simple/resources/assets/styles/layouts/_header.scss
.banner {
  position: relative;

  nav {
    background: none;
    height: auto;

    & > .container > .row {
      &::after {
        display: none;
      }

      @media #{$small-and-down} {
        flex-wrap: nowrap;
        margin-bottom: 0;
      }
    }
  }

  .logo {
    max-width: 300px;
    padding: 10px 15px;
    display: inline-block;

    img {
      width: 100%;
      height: auto;
      display: inline-block;
    }

    @media #{$medium-and-down} {
      padding-left: 0;
      min-height: 120px;
      display: flex;

      img {
        align-self: center;
        flex: 0 0 auto;
      }
    }
  }

  .cta-link {
    padding: 10px 20px;
    text-align: right;

    @media #{$medium-and-down} {
      padding: 10px 0;
      display: flex;
      align-items: flex-end;

      .cta-headline {
        padding: 0 1rem;
      }
    }

    .btn {
      height: auto;
      padding: 5px 2rem;
    }

    .cta-headline {
      font-size: 0.9em;
      max-width: 200px;
      text-align: center;

      $themes-list: "bright", "chrome", "executive", "grass", "ocean", "sunrise";
      $color-1-list: $color-bright-1, $color-chrome-1, $color-executive-1, $color-grass-1, $color-ocean-1, $color-sunrise-1;

      @for $n from 1 through length($themes-list) {
        [data-color="#{nth($themes-list, $n)}"] & {
          color: nth($color-1-list, $n);
        }
      }
    }
  }

  .navbar {
    margin-bottom: 0;

    &[data-text-color="light"] {
      .navbar-menu > ul > li > a, .menu-trigger-wrapper label {
        color: $color-white;
      }
    }
  }

  .menu-trigger-wrapper {
    position: relative;

    [type="checkbox"] {
      position: absolute;
      opacity: 0;
      pointer-events: none;
    }

    input:focus + label {
      outline: $color-grey-dark auto 5px;
    }

    label {
      display: block;
      text-decoration: none;
      height: 50px;
      width: 50px;
      text-align: center;
      color: $color-black;
      cursor: pointer;
      padding: 0;
      float: right;

      &::before, &::after {
        display: none;
      }

      i {
        font-size: 2em;
        line-height: 1.5em;
      }

      html[data-contrast="true"] & {
        color: $color-white;
      }
    }
  }
}

nav {
  ul {
    a {
      text-decoration: none;
      font-weight: normal;
      padding: 1rem 15px;
      color: $color-black;
    }

    li.current_page_item {
      a {
        background: rgba($color-black, 0.1);
      }
    }
  }
}

.navbar-menu {
  // width: 100%;
  border: none;
  margin: 0;
  box-shadow: none;
  padding: 0 15px;

  li {
    &.menu-item-has-children {
      a {
        cursor: default;

        @media #{$medium-and-down} {
          cursor: pointer;
        }
      }

      .sub-menu {
        max-height: 0;
        overflow: hidden;
        transition: max-height 0.3s ease;
        // background: $color-blue-light;

        li {
          float: none;
        }

        a {
          cursor: pointer;
        }

        @media #{$large-and-up} {
          max-height: 300em;
          flex-direction: column;
          position: absolute;
          z-index: 10;
          background: $color-white;
          transition: max-height 0.3s ease;
          height: 0;
          overflow: hidden;
        }
      }

      &:hover, &:focus, &.hover {
        .sub-menu {
          height: auto;
        }
      }
    }

    &.current-page-ancestor, &.current-menu-item, &.active {
      // background: $color-teal;
    }

    &:hover, &:focus, &.hover {
      // background: $color-teal;

      & > a {
        // color: $color-white;
        text-decoration: underline;
      }
    }

    a {
      background: none;
    }
  }

  @media #{$medium-only} {
    height: em-calc(84px);

    li {
      height: 100%;
      display: flex;
      align-items: center;

      a {
        font-size: 0.9em;
      }
    }
  }
  @media #{$medium-and-down} {
    flex-direction: column;
    flex-wrap: nowrap;
    margin: 0;
    width: 100%;
    transition: max-height 0.3s ease;
    max-height: 0;
    overflow: hidden;

    li {
      width: 100%;

      &.hover {
        .sub-menu {
          max-height: 100em;
        }
      }
    }

    .mobilenav-active & {
      max-height: 100em;
    }
  }

  .cta-link {
    padding: 0 15px;
  }
}

